rust_compiler/libs/integration_tests/src/snapshots/integration_tests__number_literal_tests__number_literal_tests__number_literal_optimization.snap
---
source: libs/integration_tests/src/number_literal_tests.rs
assertion_line: 27
expression: output
---
## Unoptimized Output

j main
main:
move r8 42000
move r9 -255
move r10 -240
move r11 373.15

## Optimized Output

move r8 42000
move r9 -255
move r10 -240
move r11 373.15
